package org.yyb.command.remoteController;

public interface Command {

    void execute();

    void undo();
}
