package org.yyb.command.remoteController;

public class LightReceiver {

    public void on() {
        System.out.println("电灯打开了... ");
    }

    public void off() {
        System.out.println("点灯关闭了... ");
    }
}
