@startuml

interface Command {
+ execute(): void
+ undo(): void
}

class LightOnCommand {
+ execute(): void
+ undo(): void
}

class LightOffCommand {
+ execute(): void
+ undo(): void
}

Command <|.. LightOnCommand
Command <|.. LightOffCommand

class LightReceiver {
+ on(): void
+ off(): void
}

LightOnCommand o-- LightReceiver
LightOffCommand o-- LightReceiver

class NoCommand
note top of NoCommand : NoCommand表示空命令，对于简化操作\n有帮助可以省去对空的判断

Command <|... NoCommand

class RemoteController {
- onCommands: Command[]
- offCommands: Command[]
}

RemoteController o-- Command

class Client

Client ..> RemoteController
Client ..> LightOnCommand
Client ..> LightOffCommand
Client ..> LightReceiver


@enduml